# budgie-session

./: NEWS  README.md  meson.build  meson_options.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml
data/: budgie-desktop-daemonv2.desktop.in.in  budgie-desktop.desktop.in.in  budgie-desktop.in  budgie-labwc.desktop.in.in  budgie-labwc.session.desktop.in.in  meson.build  org.buddiesofbudgie.SessionManager.gschema.xml.in  startbudgiedesktop.in
data/systemd/: meson.build
doc/dbus/: budgie-session.xml.in
doc/man/: budgie-session-inhibit.xml  budgie-session-quit.1  budgie-session-selector.xml  budgie-session.1  meson.build
gnome-session/: budgie-session.in  gsm-app.c  gsm-app.h  gsm-autostart-app.c  gsm-autostart-app.h  gsm-fail-whale-dialog.c  gsm-fail-whale.c  gsm-manager.c  gsm-presence.c  gsm-session-save.c  gsm-util.c  gsm-util.h  main.c  meson.build
po/: POTFILES.in  POTFILES.skip  README.md  budgie-session.pot  meson.build
scripts/: mkRelease.sh
tools/: gnome-session-check-accelerated-gl-helper.c  gnome-session-check-accelerated.c  gnome-session-compositor-ready.c  gnome-session-selector.c  meson.build
