option('consolekit', type: 'boolean', value: false, description: 'Use consolekit')
option('deprecation_flags', type: 'boolean', value: false, description: 'use *_DISABLE_DEPRECATED flags')
option('docbook', type: 'boolean', value: false, description: 'build documentation')
option('gsd-libexecdir', type: 'string', description: 'Directory containing the gsd-* executables')
option('man', type: 'boolean', value: true, description: 'build documentation (requires xmlto)')
option('session_selector', type: 'boolean', value: false, description: 'enable building a custom session selector dialog')
option('systemd', type: 'boolean', value: true, description: 'Use systemd')
option('systemd_session', type: 'combo', choices: ['disable', 'enable', 'default'], value: 'disable', description: 'Whether to include systemd session support and use it by default')
option('systemd_journal', type: 'boolean', value:'true', description: 'Send log to systemd-journal')
option('systemduserunitdir', type: 'string', description: 'Directory for systemd user service files')
option('with-polkit', type: 'boolean', value: true, description: 'Enable PolKit support')
option('with-stateless', type: 'boolean', value: false, description: 'Enable stateless XDG paths')
option('xdg-appdir', type: 'string', description: 'XDG autostart path')
